# Auto-Gaussian

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment-chem.yml  environment.yml  pyproject.toml
.github/: pull_request_template.md
config/: gaussian_server.example.json  python-environments.json  required-checks.json  rtwin_gaussian_server_ssh_config.example  runtime.example.json  ssh_config.example  static-quality.json
docs/: asymmetric-catalysis-design.md  asymmetric-catalysis-offline-contract.md  asymmetric-catalysis-smoke-proposal.json  asymmetric-catalysis-v1-readiness.md  data-confidentiality.md  development-handbook.md  end-to-end-reaction-computation-workflow.md  engineering-maintenance.md  human-scientific-decision-layer.md  idempotent-execution-migration.md  main-group-open-shell-minimum-live-smoke-approval-checklist-draft.md  main-group-open-shell-minimum-two-stage-family.md  main-group-open-shell-v1.md  method-evidence-v2.5.md  ordinary-minimum-live-smoke-approval-checklist-draft.md  private-data-migration.md  r09-dual-route-conformer-design.md  release-2.2.0-checklist.md  release-2.3.0-checklist.md  release-2.4.0-checklist.md  release-2.5.0-checklist.md  release-2.5.2-checklist.md  release-2.5.3-checklist.md  release-2.5.4-checklist.md  release-provenance.md  repository-status.md  research-output-citation-template.md  resource-monitor-efficiency-migration.md  ts-freq-irc-design.md  v2.5-integration-approval.md
release-manifests/: v2.3.0.json
requirements/: chemistry-ci-constraints.txt  chemistry.txt  (+1 more)
(+770 files in other folders)
